[package]
name = "sit-core"
version = "0.1.0"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/sit-it/sit"
documentation = "https://docs.rs/sit-core"

[dependencies]
derive-error = "0.0"
typed-builder = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
digest = "0.7"
tempdir = "0.3"
data-encoding = "2.1"
glob = "0.2"
lazy_static = "1.0"
blake2 = { version = "0.7", optional = true }
sha-1 = { version = "0.7", optional = true }
uuid = { version = "0.5", features = ["v4"], optional = true }

[dev-dependencies]
assert_matches = "1.1"

[build-dependencies]
cc = "1.0"
include_dir = { git = "https://github.com/yrashk/include_dir", branch="include_files_backslashes", version = "0.1" }

[features]
default = ["blake2", "sha-1", "uuid", "duktape-reducers"]
duktape-reducers = ["duktape"]
duktape = []
