[package]
name = "sit-web"
version = "0.1.0"
description = "SIT's an Issue Tracker Web Interface"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.29"
chrono = "0.4"
tempfile = "2.2"
config = { version = "0.8", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
xdg = "2.1"
jmespath = "0.2"
rouille =  "2.0"
lazy_static = "1.0"
mime_guess = "1.8"
itertools = "0.7"
sit-core = { path = "../sit-core" }

[build-dependencies]
include_dir = "0.1"

