[package]
name = "sit-web"
version = "0.4.1"
description = "Serverless Information Tracker Web Interface"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.29"
chrono = "0.4"
tempfile = "2.2"
tempdir = "0.3"
config = { version = "0.8", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xdg = "2.1"
jmespath = { version = "0.2", features = ["sync"] }
rouille = "2.1.0"
lazy_static = "1.0"
mime_guess = "1.8"
itertools = "0.7"
rayon = "1.0"
digest = "0.7"
blake2 = "0.7"
hex = "0.3"
which = "2.0"
thread_local = "0.3"
sit-core = { path = "../sit-core", version = "0.4.1", features = ["git"] }

[build-dependencies]
include_dir = "0.1"
fs_extra = "1.1"

[features]
windows7 = ["sit-core/windows7"]

