[package]
name = "sit"
version = "0.3.0"
description = "SIT's an Issue Tracker"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.29"
chrono = "0.4"
tempfile = "2.2"
config = { version = "0.8", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
xdg = "2.1"
jmespath = { version = "0.2", features = ["sync"] }
tini = "0.2.0"
fs_extra = "1.1"
pbr = "1.0"
tempdir = "0.3"
glob = "0.2"
rayon = "1.0"
question = "0.2"
sit-core = { path = "../sit-core", version = "0.3.0" }

[features]
windows7 = ["sit-core/windows7"]

