[package]
name = "sit"
version = "0.5.0-pre"
description = "Serverless Information Tracker"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
yaml-rust = "0.3.5"
chrono = "0.4"
tempfile = "2.2"
config = { version = "0.8", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
jmespath = { version = "0.2", features = ["sync"] }
fs_extra = "1.1"
pbr = "1.0"
tempdir = "0.3"
glob = "0.2"
rayon = "1.0"
question = "0.2"
dunce = "0.1"
which = "2.0"
walkdir = "2.1"
atty = "0.2"
thread_local = "0.3"
derive-error = "0.0"
directories = "1.0"
itertools = "0.7"
sit-core = { path = "../sit-core", version = "0.5.0-pre", features = ["git"] }

[dev-dependencies]
cli_test_dir = "0.1.5"
git2 = { version = "0.7", default-features = false }
remove_dir_all = "0.5"

[features]
default = ["deprecated-items"]
windows7 = ["sit-core/windows7"]
deprecated-items = ["sit-core/deprecated-item-api"]
